BTWCT-959: Image Gallery: Magnify icon is overlapping on anchor => fixed z-index values

--- a/waters-aem-frontend/src/styles/image-carousel.scss
+++ b/waters-aem-frontend/src/styles/image-carousel.scss
@@ -48,7 +48,7 @@
     position: absolute;
     bottom: 22px;
     right: 19px;
-    z-index: 9999;
+    z-index: 99;
 
     @include mobile {
         right: 18px;
